Added some hover effects

--- a/index.jade
+++ b/index.jade
@@ -34,8 +34,8 @@ html
           img(src = "images/Logo_new.png")
         
     section.fullWidth#menu
-      .row
-        nav.top-bar.sticky(data-topbar)
+      .sticky.contain-to-grid
+        nav.top-bar(data-topbar)
           ul.title-area
             li.name
               h1 Текстиль в Интерьере
@@ -65,25 +65,37 @@ html
     section.fullWidth.content#content
       .row
         .large-12.medium-12.small-12.columns
-          h1.text-center.up Наши услуги
+          h1.text-center.up Разделы
         .large-4.medium-6.small-12.columns
           .point
-            h2.text-center Sample block
+            a.darken(href = "#")
+            a(href = "#")
+              h2.text-center Текстиль
         .large-4.medium-6.small-12.columns
           .point
-            h2.text-center Sample block
+            a.darken(href = "#")
+            a(href = "#")
+              h2.text-center Шторы
         .large-4.medium-6.small-12.columns
           .point
-            h2.text-center Sample block
+            a.darken(href = "#")
+            a(href = "#")
+              h2.text-center Чехлы
         .large-4.medium-6.small-12.columns
           .point
-            h2.text-center Sample block
+            a.darken(href = "#")
+            a(href = "#")
+              h2.text-center Подушки
         .large-4.medium-6.small-12.columns
           .point
-            h2.text-center Sample block
+            a.darken(href = "#")
+            a(href = "#")
+              h2.text-center Скатерти
         .large-4.medium-6.small-12.columns
           .point
-            h2.text-center Sample block
+            a.darken(href = "#")
+            a(href = "#")
+              h2.text-center Штучки
           
     
     //SCRIPTS
