--- a/scss/app.scss
+++ b/scss/app.scss
@@ -72,11 +72,13 @@ section.blocky, header, footer {
   padding-top: 2em !important;
   padding-bottom: 2em !important;
 
-  position: fixed;
+  position: absolute;
   width: 100%;
-
   height: 150px;
-  z-index: 1000;
+  left: 0;
+  top: 0;
+
+  z-index: 999;
   opacity: 1;
 
   img {
@@ -101,11 +103,10 @@ section.blocky, header, footer {
 #menu {
   background-color: $dark;
 
-  position: fixed;
+  position: absolute;
   top: 150px;
   width:100%;
-  height: 75px;
-  z-index: 999;
+  z-index: 1000;
 
   border-bottom: solid 4px $grey;
 
@@ -142,8 +143,13 @@ section.blocky, header, footer {
 .point {
   width: 98%;
   height: 340px;
-  border-bottom: 3px solid $iron;
+  border: 3px solid $iron;
   background-color: $gainsboro;
+  background-image: url("../images/mountains2.jpg");
+  background-position: center;
+  background-size: cover;
+
+  overflow: hidden;
 
   margin-left: 1%;
   margin-right: auto;
@@ -151,14 +157,61 @@ section.blocky, header, footer {
 
   padding: 1em 2em;
 
+  //#DARKEN#
+  .darken {
+    display: block;
+    position: absolute;
+    z-index: 0;
+
+    width: 90%;
+    height: 340px;
+    left: 5%;
+    top: 0;
+    position: center;
+
+    transition: all 0.32s ease-in-out;
+
+    background-color: $black;
+    opacity: 0;
+  }
+
+  //#HOVER#TRANSITIONS#
   transition: all 0.32s ease-in-out;
 
-  &:hover {
-    background-color: $grey-darker;
-    border-bottom-color: $grey;
+  h2 {
+    transition: all 0.32s ease-in-out;
 
-    h1, h2, h3, h4, h5, h6, p, a {
+    display: block;
+    position: absolute;
+    width: 60%;
+    left: 20%;
+    height: auto;
+    
+    text-align: center;
+    z-index: 1;
+  }
+
+  &:hover {
+    transition: all 0.32s ease-in-out;
+
+    background-color: $grey-darker;
+    border: solid 6px $grey;
+
+    .darken {
+      opacity: 0.2;
+    }
+
+    h2{
       color: $white !important;
+      font-size: (($h2-font-size) + 0.1);
+      margin-top: ($header-top-margin*2);
+    }
+    @include exports("type") {
+      @if $include-html-type-classes {
+        h2 {
+          font-size: (($h2-font-size - $h2-font-reduction) + 0.1);
+        }
+      }
     }
   }
 }
