--- a/index.jade
+++ b/index.jade
@@ -27,24 +27,26 @@ html
   
   body#top
     
-    section.fullWidth#logo
-      .row
-        .small-12.columns
-          //h1.up.text-center Logo
-          img(src = "images/Logo_new.png")
-        
+    section.fullWidth.spacer
+      #logo
+        .row
+          .small-12.columns
+            //h1.up.text-center Logo
+            img(src = "images/Logo_new.png")
+          
     section.fullWidth#menu
       .sticky.contain-to-grid
-        nav.top-bar(data-topbar)
+        nav.top-bar(data-topbar role="navigation")
           ul.title-area
             li.name
               h1 Текстиль в Интерьере
             li.toggle-topbar.menu-icon
-              a(href = "#") Меню
+              a(href = "#") 
+                span Меню
           section.top-bar-section
             ul.right
               li
-                a(href = "#") Главная
+                a(href = "#footer") Главная
               li.divider
               li
                 a(href = "#") Портфолио
@@ -60,7 +62,6 @@ html
               li.divider
               li
                 a(href = "#") Контакты
-    section.fullWidth.spacer
     
     section.fullWidth.content#content
       .row
@@ -97,7 +98,39 @@ html
             a(href = "#")
               h2.text-center Штучки
           
-    
+    section.fullWidth#footer
+      .row
+        .large-offset-2.medium-offset-1.large-8.medium-10.small-12.columns
+          .row
+            .large-6.medium-6.small-12.columns
+              .row  
+                .large-12.columns
+                  h5.text-left На сайте:
+                .large-6.medium-6.small-6.columns
+                  ul.map
+                    li
+                      a(href = "#") Ссылка
+                    li
+                      a(href = "#") Ссылка
+                    li
+                      a(href = "#") Ссылка
+                    li
+                      a(href = "#") Ссылка
+                    li
+                      a(href = "#") Ссылка
+                .large-6.medium-6.small-6.columns
+                  ul.map
+                    li
+                      a(href = "#") Ссылка
+                    li
+                      a(href = "#") Ссылка
+                    li
+                      a(href = "#") Ссылка
+                    li
+                      a(href = "#") Ссылка
+                    li
+                      a(href = "#") Ссылка
+          
     //SCRIPTS
     //JQUERY
     script(src = "bower_components/jquery/dist/jquery.min.js")
