--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -8,38 +8,38 @@ meta.foundation-mq-small {
 }
 
 meta.foundation-mq-small-only {
-  font-family: "/only screen and (max-width: 67.375em)/";
+  font-family: "/only screen and (max-width: 40em)/";
   width: 0;
 }
 
 meta.foundation-mq-medium {
-  font-family: "/only screen and (min-width:67.4375em)/";
-  width: 67.4375em;
+  font-family: "/only screen and (min-width:40.0625em)/";
+  width: 40.0625em;
 }
 
 meta.foundation-mq-medium-only {
-  font-family: "/only screen and (min-width:67.4375em) and (max-width:80em)/";
-  width: 67.4375em;
+  font-family: "/only screen and (min-width:40.0625em) and (max-width:64em)/";
+  width: 40.0625em;
 }
 
 meta.foundation-mq-large {
-  font-family: "/only screen and (min-width:80.0625em)/";
-  width: 80.0625em;
+  font-family: "/only screen and (min-width:64.0625em)/";
+  width: 64.0625em;
 }
 
 meta.foundation-mq-large-only {
-  font-family: "/only screen and (min-width:80.0625em) and (max-width:97.5em)/";
-  width: 80.0625em;
+  font-family: "/only screen and (min-width:64.0625em) and (max-width:90em)/";
+  width: 64.0625em;
 }
 
 meta.foundation-mq-xlarge {
-  font-family: "/only screen and (min-width:97.5625em)/";
-  width: 97.5625em;
+  font-family: "/only screen and (min-width:90.0625em)/";
+  width: 90.0625em;
 }
 
 meta.foundation-mq-xlarge-only {
-  font-family: "/only screen and (min-width:97.5625em) and (max-width:120em)/";
-  width: 97.5625em;
+  font-family: "/only screen and (min-width:90.0625em) and (max-width:120em)/";
+  width: 90.0625em;
 }
 
 meta.foundation-mq-xxlarge {
@@ -73,12 +73,12 @@ body {
 }
 
 body {
-  background: #FFC2B3;
-  color: #FFFFFF;
+  background: #fff;
+  color: #222;
   cursor: auto;
-  font-family: "Montserrat", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-style: normal;
-  font-weight: 300;
+  font-weight: normal;
   line-height: 1.5;
   margin: 0;
   padding: 0;
@@ -156,7 +156,7 @@ select {
 
 .row {
   margin: 0 auto;
-  max-width: 80rem;
+  max-width: 128rem;
   width: 100%;
 }
 
@@ -476,7 +476,7 @@ select {
   }
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .medium-push-0 {
     position: relative;
     left: 0;
@@ -1477,7 +1477,7 @@ select {
   }
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .medium-block-grid-1 > li {
     list-style: none;
     width: 100%;
@@ -2170,7 +2170,7 @@ button::-moz-focus-inner {
   padding: 0;
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   button, .button {
     display: inline-block;
   }
@@ -2383,7 +2383,7 @@ button::-moz-focus-inner {
   border-left: 0;
 }
 
-@media only screen and (max-width: 67.375em) {
+@media only screen and (max-width: 45em) {
   .button-group.stack-for-small > li {
     display: block;
     margin: 0;
@@ -2508,7 +2508,7 @@ button::-moz-focus-inner {
   border-bottom-right-radius: 3px;
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .button-group.radius.stack-for-small > * {
     display: inline-block;
     margin: 0 -2px;
@@ -2546,7 +2546,7 @@ button::-moz-focus-inner {
   }
 }
 
-@media only screen and (max-width: 67.375em) {
+@media only screen and (max-width: 45em) {
   .button-group.radius.stack-for-small > * {
     display: block;
     margin: 0;
@@ -2695,7 +2695,7 @@ button::-moz-focus-inner {
   border-bottom-right-radius: 1rem;
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .button-group.round.stack-for-small > * {
     display: inline-block;
     margin: 0 -2px;
@@ -2733,7 +2733,7 @@ button::-moz-focus-inner {
   }
 }
 
-@media only screen and (max-width: 67.375em) {
+@media only screen and (max-width: 45em) {
   .button-group.round.stack-for-small > * {
     display: block;
     margin: 0;
@@ -2920,7 +2920,7 @@ button::-moz-focus-inner {
   display: block;
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .clearing-main-prev,
   .clearing-main-next {
     height: 100%;
@@ -4001,7 +4001,7 @@ label.error {
   width: auto;
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .icon-bar.medium-vertical {
     height: 100%;
     width: auto;
@@ -4095,7 +4095,7 @@ label.error {
   width: auto;
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .icon-bar.two-up.medium-vertical .item {
     width: auto;
   }
@@ -4115,7 +4115,7 @@ label.error {
   width: auto;
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .icon-bar.three-up.medium-vertical .item {
     width: auto;
   }
@@ -4135,7 +4135,7 @@ label.error {
   width: auto;
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .icon-bar.four-up.medium-vertical .item {
     width: auto;
   }
@@ -4155,7 +4155,7 @@ label.error {
   width: auto;
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .icon-bar.five-up.medium-vertical .item {
     width: auto;
   }
@@ -4175,7 +4175,7 @@ label.error {
   width: auto;
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .icon-bar.six-up.medium-vertical .item {
     width: auto;
   }
@@ -4195,7 +4195,7 @@ label.error {
   width: auto;
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .icon-bar.seven-up.medium-vertical .item {
     width: auto;
   }
@@ -4215,7 +4215,7 @@ label.error {
   width: auto;
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .icon-bar.eight-up.medium-vertical .item {
     width: auto;
   }
@@ -4235,7 +4235,7 @@ label.error {
   width: auto;
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .icon-bar.two-up.medium-vertical .item {
     width: auto;
   }
@@ -4255,7 +4255,7 @@ label.error {
   width: auto;
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .icon-bar.three-up.medium-vertical .item {
     width: auto;
   }
@@ -4275,7 +4275,7 @@ label.error {
   width: auto;
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .icon-bar.four-up.medium-vertical .item {
     width: auto;
   }
@@ -4295,7 +4295,7 @@ label.error {
   width: auto;
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .icon-bar.five-up.medium-vertical .item {
     width: auto;
   }
@@ -4315,7 +4315,7 @@ label.error {
   width: auto;
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .icon-bar.six-up.medium-vertical .item {
     width: auto;
   }
@@ -4335,7 +4335,7 @@ label.error {
   width: auto;
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .icon-bar.seven-up.medium-vertical .item {
     width: auto;
   }
@@ -4355,7 +4355,7 @@ label.error {
   width: auto;
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .icon-bar.eight-up.medium-vertical .item {
     width: auto;
   }
@@ -4542,7 +4542,7 @@ label.error {
 }
 
 /* Styles for screens that are at least 768px; */
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .joyride-tip-guide {
     width: 300px;
     left: inherit;
@@ -4947,7 +4947,7 @@ kbd {
   display: none;
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .touch .orbit-container .orbit-prev,
   .touch .orbit-container .orbit-next {
     display: inherit;
@@ -4957,7 +4957,7 @@ kbd {
   }
 }
 
-@media only screen and (max-width: 67.375em) {
+@media only screen and (max-width: 45em) {
   .orbit-stack-on-small .orbit-slides-container {
     height: auto !important;
   }
@@ -5375,7 +5375,7 @@ ul.pagination li {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
 }
 
-@media only screen and (max-width: 67.375em) {
+@media only screen and (max-width: 45em) {
   .reveal-modal {
     min-height: 100vh;
   }
@@ -5393,17 +5393,17 @@ ul.pagination li {
   margin-bottom: 0;
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .reveal-modal {
     left: 0;
     margin: 0 auto;
-    max-width: 80rem;
+    max-width: 128rem;
     right: 0;
     width: 80%;
   }
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .reveal-modal {
     top: 6.25rem;
   }
@@ -5421,51 +5421,51 @@ ul.pagination li {
   padding: 0;
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .reveal-modal.tiny {
     left: 0;
     margin: 0 auto;
-    max-width: 80rem;
+    max-width: 128rem;
     right: 0;
     width: 30%;
   }
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .reveal-modal.small {
     left: 0;
     margin: 0 auto;
-    max-width: 80rem;
+    max-width: 128rem;
     right: 0;
     width: 40%;
   }
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .reveal-modal.medium {
     left: 0;
     margin: 0 auto;
-    max-width: 80rem;
+    max-width: 128rem;
     right: 0;
     width: 60%;
   }
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .reveal-modal.large {
     left: 0;
     margin: 0 auto;
-    max-width: 80rem;
+    max-width: 128rem;
     right: 0;
     width: 70%;
   }
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .reveal-modal.xlarge {
     left: 0;
     margin: 0 auto;
-    max-width: 80rem;
+    max-width: 128rem;
     right: 0;
     width: 95%;
   }
@@ -5481,11 +5481,11 @@ ul.pagination li {
   top: 0;
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .reveal-modal.full {
     left: 0;
     margin: 0 auto;
-    max-width: 80rem;
+    max-width: 128rem;
     right: 0;
     width: 100%;
   }
@@ -6084,7 +6084,7 @@ table tr td {
   padding: 0 0.9375rem;
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .tabs.vertical {
     float: left;
     margin: 0;
@@ -6200,7 +6200,7 @@ table tr td {
   font-weight: normal;
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .tooltip > .nub {
     border-color: transparent transparent #333333 transparent;
     top: -10px;
@@ -6231,8 +6231,8 @@ table tr td {
 }
 
 meta.foundation-mq-topbar {
-  font-family: "/only screen and (min-width:67.4375em)/";
-  width: 67.4375em;
+  font-family: "/only screen and (min-width:80em)/";
+  width: 80em;
 }
 
 /* Wrapped around .top-bar to contain to grid width */
@@ -6310,7 +6310,7 @@ meta.foundation-mq-topbar {
   padding-top: 0.4125rem;
 }
 
-@media only screen and (max-width: 67.375em) {
+@media only screen and (max-width: 45em) {
   .top-bar .button, .top-bar button {
     position: relative;
     top: -1px;
@@ -6780,7 +6780,7 @@ meta.foundation-mq-topbar {
   display: block;
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 80em) {
   .top-bar {
     background: #111111;
     overflow: visible;
@@ -6821,7 +6821,7 @@ meta.foundation-mq-topbar {
   .contain-to-grid .top-bar {
     margin-bottom: 0;
     margin: 0 auto;
-    max-width: 80rem;
+    max-width: 128rem;
   }
   .top-bar-section {
     transition: none 0 0;
@@ -7014,7 +7014,7 @@ meta.foundation-mq-topbar {
   text-align: justify !important;
 }
 
-@media only screen and (max-width: 67.375em) {
+@media only screen and (max-width: 45em) {
   .small-only-text-left {
     text-align: left !important;
   }
@@ -7044,7 +7044,7 @@ meta.foundation-mq-topbar {
   }
 }
 
-@media only screen and (min-width: 67.4375em) and (max-width: 80em) {
+@media only screen and (min-width: 45.0625em) and (max-width: 80em) {
   .medium-only-text-left {
     text-align: left !important;
   }
@@ -7059,7 +7059,7 @@ meta.foundation-mq-topbar {
   }
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .medium-text-left {
     text-align: left !important;
   }
@@ -7074,7 +7074,7 @@ meta.foundation-mq-topbar {
   }
 }
 
-@media only screen and (min-width: 80.0625em) and (max-width: 97.5em) {
+@media only screen and (min-width: 80.0625em) and (max-width: 90em) {
   .large-only-text-left {
     text-align: left !important;
   }
@@ -7104,7 +7104,7 @@ meta.foundation-mq-topbar {
   }
 }
 
-@media only screen and (min-width: 97.5625em) and (max-width: 120em) {
+@media only screen and (min-width: 90.0625em) and (max-width: 120em) {
   .xlarge-only-text-left {
     text-align: left !important;
   }
@@ -7119,7 +7119,7 @@ meta.foundation-mq-topbar {
   }
 }
 
-@media only screen and (min-width: 97.5625em) {
+@media only screen and (min-width: 90.0625em) {
   .xlarge-text-left {
     text-align: left !important;
   }
@@ -7466,7 +7466,7 @@ blockquote p {
   padding: 0 0.0625rem;
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   h1, h2, h3, h4, h5, h6 {
     line-height: 1.4;
   }
@@ -7732,7 +7732,7 @@ ul.off-canvas-list li a:active {
   z-index: 1002;
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .move-right .exit-off-canvas:hover {
     background: rgba(255, 255, 255, 0.05);
   }
@@ -7763,7 +7763,7 @@ ul.off-canvas-list li a:active {
   z-index: 1002;
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .move-left .exit-off-canvas:hover {
     background: rgba(255, 255, 255, 0.05);
   }
@@ -7794,7 +7794,7 @@ ul.off-canvas-list li a:active {
   z-index: 1002;
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .offcanvas-overlap .exit-off-canvas:hover {
     background: rgba(255, 255, 255, 0.05);
   }
@@ -7825,7 +7825,7 @@ ul.off-canvas-list li a:active {
   z-index: 1002;
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .offcanvas-overlap-left .exit-off-canvas:hover {
     background: rgba(255, 255, 255, 0.05);
   }
@@ -7856,7 +7856,7 @@ ul.off-canvas-list li a:active {
   z-index: 1002;
 }
 
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .offcanvas-overlap-right .exit-off-canvas:hover {
     background: rgba(255, 255, 255, 0.05);
   }
@@ -8056,7 +8056,7 @@ ul.off-canvas-list li a:active {
 }
 
 /* medium displays */
-@media only screen and (min-width: 67.4375em) {
+@media only screen and (min-width: 45.0625em) {
   .hide-for-small-only, .show-for-small-up, .hide-for-small, .hide-for-small-down, .show-for-medium-only, .show-for-medium-up, .show-for-medium, .show-for-medium-down, .hide-for-large-only, .hide-for-large-up, .hide-for-large, .show-for-large-down, .hide-for-xlarge-only, .hide-for-xlarge-up, .hide-for-xlarge, .show-for-xlarge-down, .hide-for-xxlarge-only, .hide-for-xxlarge-up, .hide-for-xxlarge, .show-for-xxlarge-down {
     display: inherit !important;
   }
@@ -8134,7 +8134,7 @@ ul.off-canvas-list li a:active {
 }
 
 /* xlarge displays */
-@media only screen and (min-width: 97.5625em) {
+@media only screen and (min-width: 90.0625em) {
   .hide-for-small-only, .show-for-small-up, .hide-for-small, .hide-for-small-down, .hide-for-medium-only, .show-for-medium-up, .hide-for-medium, .hide-for-medium-down, .hide-for-large-only, .show-for-large-up, .hide-for-large, .hide-for-large-down, .show-for-xlarge-only, .show-for-xlarge-up, .show-for-xlarge, .show-for-xlarge-down, .hide-for-xxlarge-only, .hide-for-xxlarge-up, .hide-for-xxlarge, .show-for-xxlarge-down {
     display: inherit !important;
   }
@@ -8623,6 +8623,7 @@ section.blocky, header, footer {
   background-color: #FFFFFF;
   min-height: 900px;
   box-shadow: 0 0 15px #293338;
+  margin-bottom: 0 !important;
 }
 
 .content h1, .content h2, .content h3, .content h4, .content h5, .content h6, .content p {
@@ -8650,7 +8651,7 @@ section.blocky, header, footer {
   display: block;
   position: absolute;
   z-index: 0;
-  width: 90%;
+  width: 25rem;
   height: 340px;
   left: 5%;
   top: 0;
@@ -8691,6 +8692,21 @@ section.blocky, header, footer {
   width: 100%;
   padding-top: 1.7em;
   text-align: center;
-  background-color: #EFEFEF;
-  opacity: 0.5;
+  background-color: #444444;
+}
+
+#footer .map {
+  list-style: none;
+  text-align: left;
+}
+
+#footer .map li {
+  text-align: left;
+}
+
+#footer .map a {
+  text-decoration: none;
+  text-rendering: geometricPrecision;
+  color: #999999;
+  text-align: left;
 }
