--- a/index.jade
+++ b/index.jade
@@ -12,8 +12,10 @@ html
     link(rel="icon" type="image/png" href="images/favicon.png")
     
     //STYLESHEETS
-    link(rel = "stylesheet" href = "stylesheets/style.css")
     link(rel = "stylesheet" href = "stylesheets/app.css")
+    
+    //FONT
+    link(href='https://fonts.googleapis.com/css?family=Open+Sans&subset=latin,cyrillic' rel='stylesheet' type='text/css')
     
     //ANIMATE WOW
     link(rel = "stylesheet" href = "stylesheets/animate.css")
@@ -26,30 +28,24 @@ html
     script new WOW().init()
   
   body#top
-    
-    section.fullWidth.spacer
-      #logo
-        .row
-          .small-12.columns
-            //h1.up.text-center Logo
-            img(src = "images/Logo_new.png")
-          
-    section.fullWidth#menu
+    #menu
       .sticky.contain-to-grid
         nav.top-bar(data-topbar role="navigation")
           ul.title-area
             li.name
-              h1 Текстиль в Интерьере
-            li.toggle-topbar.menu-icon
+              img#logo(src = "images/Logo_shadow.png")
+              img#logotype(src = "images/Logotype.png")
+              //h1 Текстиль в Интерьере
+            li.toggle-topbar.menu-icon(onclick = "checkTop()")
               a(href = "#") 
                 span Меню
           section.top-bar-section
             ul.right
               li
-                a(href = "#footer") Главная
+                a(href = "index.html") Главная
               li.divider
               li
-                a(href = "#") Портфолио
+                a(href = "portfolio.html") Портфолио
               li.divider
               li
                 a(href = "#") Эскизы
@@ -62,41 +58,58 @@ html
               li.divider
               li
                 a(href = "#") Контакты
-    
+              
+    section.fullWidth.header
+      //#logo
+        //.row
+          //.small-12.columns
+            //h1.up.text-center Logo
+            //img(src = "images/Logo_new.png")
+      //.logo
+        img(src = "images/Logo_shadow.png")
+      
+      .intro
+        //h2.text-left Здравствуй!
+        //h3.text-left Я - дизайнер-декоратор Наталья Сердич.
+        p.text-justify Текстиль играет важнейшую роль в создании красивого и стильного интерьера. Шторы и гардины, покрывала и скатерти, мебельные чехлы и подушки, оригинальные дизайнерские штучки – без них невозможно представить уютный дом. Они привносят особое настроение и тепло, а также являются неотъемлемой составляющей выбранного стиля.
+        
     section.fullWidth.content#content
       .row
         .large-12.medium-12.small-12.columns
           h1.text-center.up Разделы
         .large-4.medium-6.small-12.columns
-          .point
-            a.darken(href = "#")
-            a(href = "#")
-              h2.text-center Текстиль
+          .point#item1
+            a.description(href = "#")
+              h3.text-center.name Текстиль в интерьере
+              p Декоративный текстиль: шторы, ковры, чехлы для мебели, скатерти, подушки,  покрывала и другие прекрасные мелочи создадут неповторимую атмосферу вашего дома и подчеркнут чувство стиля своего хозяина.
         .large-4.medium-6.small-12.columns
-          .point
-            a.darken(href = "#")
-            a(href = "#")
-              h2.text-center Шторы
+          .point#item2
+              a.description(href = "#")
+                h3.text-center.name Шторы на заказ
+                p Подобранные со вкусом декоративные ткани и профессионально сшитые из них шторы,  изящные карнизы и всевозможные аксессуары подчеркнут выбранный стиль и придадут дизайнерским решениям законченность.
         .large-4.medium-6.small-12.columns
-          .point
-            a.darken(href = "#")
-            a(href = "#")
-              h2.text-center Чехлы
+          .point#item3
+            a.description(href = "#")
+              h3.text-center.name Ткани
+              p Декоративные ткани играют важнейшую роль в современном интерьере. Сочетая в себе психологию цвета, рисунка и фактуры, ткани не только украшают, но и вносят в интерьер особую атмосферу.
         .large-4.medium-6.small-12.columns
-          .point
-            a.darken(href = "#")
-            a(href = "#")
-              h2.text-center Подушки
+          .point#item4
+            a.description(href = "#")
+              h3.text-center.name Карнизы и аксессуары
+              p Карнизы для штор являются важным элементом при оформлении окон. А всевозможные аксессуары придают шторам роскошный вид и вносят в общую композицию художественный изыск и очарование. 
+
         .large-4.medium-6.small-12.columns
-          .point
-            a.darken(href = "#")
-            a(href = "#")
-              h2.text-center Скатерти
+          .point#item5
+            a.description(href = "#")
+              h3.text-center.name Солнцезащитные системы
+              p Солнцезащитные системы - это современный и лаконичный вариант оформления окон и интерьера в целом. К солнцезащитным системам относятся разнообразные жалюзи (из алюминия, пластика, дерева, бамбука), а также рулонные шторы, шторы-плиссе, шторы из бамбука...
         .large-4.medium-6.small-12.columns
-          .point
-            a.darken(href = "#")
-            a(href = "#")
-              h2.text-center Штучки
+          .point#item6
+            a.description(href = "#")
+              h3.text-center.name Штучки
+              p В современных интерьерах всего две-три дизайнерские вещи создают особую атмосферу. Неповторимые дизайнерские штучки внесут шарм  и наполнят ваш дом уютом и теплом.
+        
+    section.fullWidth#spacer
           
     section.fullWidth#footer
       .row
@@ -139,7 +152,7 @@ html
     script( src = "http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js")
     
     //FOUNDATION
-    script(src = "bower_components/foundation/js/foundation.min.js")
+    script(src = "bower_components/foundation/js/foundation.js")
     
     //APP
     script(src = "js/app.js")
