Added some basic structure to portfolio page

--- a/index.jade
+++ b/index.jade
@@ -43,19 +43,12 @@ html
             ul.right
               li
                 a(href = "index.html") Главная
-              li.divider
               li
                 a(href = "portfolio.html") Портфолио
-              li.divider
-              li
-                a(href = "#") Эскизы
-              li.divider
               li
                 a(href = "#") Услуги
-              li.divider
               li
                 a(href = "#") Блог
-              li.divider
               li
                 a(href = "#") Контакты
               
@@ -66,7 +59,7 @@ html
             //h1.up.text-center Logo
             //img(src = "images/Logo_new.png")
       //.logo
-        img(src = "images/Logo_shadow.png")
+        //img(src = "images/Logo_shadow.png")
       
       .intro
         //h2.text-left Здравствуй!
@@ -109,7 +102,7 @@ html
               h3.text-center.name Штучки
               p В современных интерьерах всего две-три дизайнерские вещи создают особую атмосферу. Неповторимые дизайнерские штучки внесут шарм  и наполнят ваш дом уютом и теплом.
         
-    section.fullWidth#spacer
+    //section.fullWidth#spacer
           
     section.fullWidth#footer
       .row
@@ -122,7 +115,7 @@ html
                 .large-6.medium-6.small-6.columns
                   ul.map
                     li
-                      a(href = "#") Ссылка
+                      a(href = "index.html") Ссылка
                     li
                       a(href = "#") Ссылка
                     li
