--- a/portfolio.jade
+++ b/portfolio.jade
@@ -33,8 +33,9 @@ html
         nav.top-bar(data-topbar role="navigation")
           ul.title-area
             li.name
-              img#logo(src = "images/Logo_new.png")
-              h1 Текстиль в Интерьере
+              img#logo(src = "images/Logo_shadow.png")
+              img#logotype(src = "images/Logotype.png")
+              //h1 Текстиль в Интерьере
             li.toggle-topbar.menu-icon(onclick = "checkTop()")
               a(href = "#") 
                 span Меню
@@ -42,21 +43,12 @@ html
             ul.right
               li
                 a(href = "index.html") Главная
-              li.divider
               li
                 a(href = "portfolio.html") Портфолио
-              li.divider
-              li
-                a(href = "#") Эскизы
-              li.divider
               li
                 a(href = "#") Услуги
-              li.divider
               li
                 a(href = "#") Блог
-              li.divider
-              li
-                a(href = "#") Контакты
               
     section.fullWidth.header
       //#logo
@@ -64,16 +56,64 @@ html
           //.small-12.columns
             //h1.up.text-center Logo
             //img(src = "images/Logo_new.png")
+      //.logo
+        img(src = "images/Logo_shadow.png")
+      
       .intro
-        h2.text-left Портфолио
-        h3.text-left В этом разделе сайта вы можете увидеть мои работы
-        p.text-justify Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris fermentum mi eu sapien vestibulum fermentum. Nunc ut suscipit massa. Mauris scelerisque tortor quis quam aliquet, lacinia tempor massa fermentum. Morbi felis urna, consectetur nec aliquam sed, ornare eu sapien. Etiam.
+        //h2.text-left Здравствуй!
+        //h3.text-left Я - дизайнер-декоратор Наталья Сердич.
+        p.text-justify Текстиль играет важнейшую роль в создании красивого и стильного интерьера. Шторы и гардины, покрывала и скатерти, мебельные чехлы и подушки, оригинальные дизайнерские штучки – без них невозможно представить уютный дом. Они привносят особое настроение и тепло, а также являются неотъемлемой составляющей выбранного стиля.
         
-    section.fullWidth
-      h2 1
-        
-    section.fullWidth#spacer
-          
+    section.fullWidth.portfolio
+      .row
+        .large-12.medium-12.small-12.columns
+          h1.text-center.up Разделы
+        .small-12.columns
+          div(data-magellan-expedition="fixed")
+            dl.sub-nav
+              dd(data-magellan-arrival="1")
+                a(href="#1") Гостинные
+              dd(data-magellan-arrival="2")
+                a(href="#2") Спальни
+              dd(data-magellan-arrival="3")
+                a(href="#3") Кухни
+              dd(data-magellan-arrival="4")
+                a(href="#4") Детские
+              dd(data-magellan-arrival="5")
+                a(href="#5") Кабинеты
+              dd(data-magellan-arrival="6")
+                a(href="#6") Разное
+              dd(data-magellan-arrival="7")
+                a(href="#7") Эскизы
+        .medium-6.small-12.columns#1
+          h2.text-left(data-magellan-destination="1") Гостинные
+          a(name="1")
+          .slider
+        .medium-6.small-12.columns#2
+          h2.text-left(data-magellan-destination="2") Спальни
+          a(name="2")
+          .slider
+        .medium-6.small-12.columns#3
+          h2.text-left(data-magellan-destination="3") Кухни
+          a(name="3")
+          .slider
+        .medium-6.small-12.columns#4
+          h2.text-left(data-magellan-destination="4") Детские
+          a(name="4")
+          .slider
+        .medium-6.small-12.columns#5
+          h2.text-left(data-magellan-destination="5") Кабинеты
+          a(name="5")
+          .slider
+        .medium-6.small-12.columns#7
+          h2.text-left(data-magellan-destination="6") Разное
+          a(name="6")
+          .slider
+        .medium-12.small-12.columns#6
+          h2.text-left(data-magellan-destination="7") Эскизы
+          a(name="7")
+          .slider
+            
     section.fullWidth#footer
       .row
         .large-offset-2.medium-offset-1.large-8.medium-10.small-12.columns
@@ -85,7 +125,7 @@ html
                 .large-6.medium-6.small-6.columns
                   ul.map
                     li
-                      a(href = "#") Ссылка
+                      a(href = "index.html") Ссылка
                     li
                       a(href = "#") Ссылка
                     li
@@ -109,13 +149,16 @@ html
           
     //SCRIPTS
     //JQUERY
-    script(src = "bower_components/jquery/dist/jquery.min.js")
+    script(src = "bower_components/foundation/js/vendor/jquery.js")
     
     //JQUERY EASING
     script( src = "http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js")
     
     //FOUNDATION
     script(src = "bower_components/foundation/js/foundation.js")
+    
+    //MAGELLAN
+    //script(src = "bower_components/foundation/js/foundation.magellan.js")
     
     //APP
     script(src = "js/app.js")
