--- a/portfolio.jade
+++ b/portfolio.jade
@@ -88,31 +88,87 @@ html
         .medium-6.small-12.columns#1
           h2.text-left(data-magellan-destination="1") Гостинные
           a(name="1")
-          .slider
+          .slider.slideshow-wrapper
+            .preloader
+            ul.example-orbit(data-orbit)
+              li
+                img(src="images/textile2.jpg" alt="")
+              li
+                img(src="images/textile2.jpg" alt="")
+              li
+                img(src="images/textile2.jpg" alt="")
         .medium-6.small-12.columns#2
           h2.text-left(data-magellan-destination="2") Спальни
           a(name="2")
-          .slider
+          .slider.slideshow-wrapper
+            .preloader
+            ul.example-orbit(data-orbit)
+              li
+                img(src="images/textile2.jpg" alt="")
+              li
+                img(src="images/textile2.jpg" alt="")
+              li
+                img(src="images/textile2.jpg" alt="")
         .medium-6.small-12.columns#3
           h2.text-left(data-magellan-destination="3") Кухни
           a(name="3")
-          .slider
+          .slider.slideshow-wrapper
+            .preloader
+            ul.example-orbit(data-orbit)
+              li
+                img(src="images/textile2.jpg" alt="")
+              li
+                img(src="images/textile2.jpg" alt="")
+              li
+                img(src="images/textile2.jpg" alt="")
         .medium-6.small-12.columns#4
           h2.text-left(data-magellan-destination="4") Детские
           a(name="4")
-          .slider
+          .slider.slideshow-wrapper
+            .preloader
+            ul.example-orbit(data-orbit)
+              li
+                img(src="images/textile2.jpg" alt="")
+              li
+                img(src="images/textile2.jpg" alt="")
+              li
+                img(src="images/textile2.jpg" alt="")
         .medium-6.small-12.columns#5
           h2.text-left(data-magellan-destination="5") Кабинеты
           a(name="5")
-          .slider
+          .slider.slideshow-wrapper
+            .preloader
+            ul.example-orbit(data-orbit)
+              li
+                img(src="images/textile2.jpg" alt="")
+              li
+                img(src="images/textile2.jpg" alt="")
+              li
+                img(src="images/textile2.jpg" alt="")
         .medium-6.small-12.columns#7
           h2.text-left(data-magellan-destination="6") Разное
           a(name="6")
-          .slider
+          .slider.slideshow-wrapper
+            .preloader
+            ul.example-orbit(data-orbit)
+              li
+                img(src="images/textile2.jpg" alt="")
+              li
+                img(src="images/textile2.jpg" alt="")
+              li
+                img(src="images/textile2.jpg" alt="")
         .medium-12.small-12.columns#6
           h2.text-left(data-magellan-destination="7") Эскизы
           a(name="7")
-          .slider
+          .slider.slideshow-wrapper
+            .preloader
+            ul.example-orbit(data-orbit)
+              li
+                img(src="images/textile2.jpg" alt="")
+              li
+                img(src="images/textile2.jpg" alt="")
+              li
+                img(src="images/textile2.jpg" alt="")
             
     section.fullWidth#footer
       .row
@@ -158,7 +214,10 @@ html
     script(src = "bower_components/foundation/js/foundation.js")
     
     //MAGELLAN
-    //script(src = "bower_components/foundation/js/foundation.magellan.js")
+    script(src = "bower_components/foundation/js/foundation.magellan.js")
+    script(src = "bower_components/foundation/js/foundation.orbit.js")
     
     //APP
     script(src = "js/app.js")
+    
+    script jQuery(document).ready(function($) {$(window).trigger('resize');});
