--- a/scss/app.scss
+++ b/scss/app.scss
@@ -129,7 +129,7 @@ $logo-size: 260px;
 
 //###MENU#STYLES###
 #menu {
-  display: none;
+  display: block;
   background-color: $dark;
 
   position: absolute;
@@ -240,6 +240,7 @@ $logo-size: 260px;
 
   h1 {
     margin: 1.2em;
+    color: $dark;
   }
 
   h2, h3, h4, h5, h6, p, a {
@@ -369,6 +370,8 @@ $point-height: 440px;
 }
 
 //###PORTFOLIO###
+$slider-height: 540px;
+
 .portfolio {
   display: block;
   box-sizing: border-box;
@@ -398,12 +401,19 @@ $point-height: 440px;
     display: block;
     box-sizing: border-box;
     width: 90%;
-    height: 540px;
+    height: $slider-height;
     margin: 1em auto;
 
     max-width: 1280px;
 
     background-color: $iron;
+    border-radius: 12px;
+
+    overflow: hidden;
+
+    ul {
+      height: $slider-height !important;
+    }
   }
 }
 
