--- a/index.jade
+++ b/index.jade
@@ -103,13 +103,15 @@ html
     //section.fullWidth#spacer
           
     section.fullWidth#footer
-      .row
-        .large-offset-2.medium-offset-1.large-8.medium-10.small-12.columns
-          .row
-            .large-6.medium-6.small-12.columns
-              .row  
-                .large-12.columns
-                  h4.text-center 
+      .small-12.columns
+        .row
+          .large-offset-2.medium-offset-1.large-8.medium-10.small-12.columns
+            .row
+              .small-12.columns
+                h4 © 2002 - 2015   Наталья Сердич - частный дизайнер декоратор.
+                h5 Телефон: 8 (916) 643-97-05    Email: serdichn@gmail.com
+      .small-12.columns.copyright
+        h6 © Copyright | Site design and brand identity - Tim Surkov
           
     //SCRIPTS
     //JQUERY
